<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
                name="vm"
                type="com.adt.game_of_life.viewmodel.MenuViewModel"/>
    </data>

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <android.support.constraint.ConstraintLayout
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    tools:context=".view.activity.MenuActivity"
                    android:layout_marginBottom="8dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toTopOf="parent"
                    android:id="@+id/constraintLayout">

                <ImageView
                        android:src="@drawable/logo"
                        android:layout_width="0dp"
                        android:layout_height="256dp"
                        android:scaleType="centerCrop"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/aboutButton"
                        android:layout_marginTop="16dp" />

                <android.support.v7.widget.AppCompatButton
                        android:background="#FFEB3B"
                        android:id="@+id/playButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/play_button_text"
                        android:onClick="@{() -> vm.startGameActivity()}"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        android:layout_marginTop="32dp" />

                <android.support.v7.widget.AppCompatButton
                        android:id="@+id/loadButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/load_button_text"
                        android:background="#FFEB3B"
                        app:layout_constraintTop_toBottomOf="@id/playButton"
                        android:layout_marginTop="@dimen/big_margin"
                        android:onClick="@{() -> vm.startLoadActivity()}" />

                <android.support.v7.widget.AppCompatButton
                        android:id="@+id/settingsButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/settings_button_text"
                        android:background="#FFEB3B"
                        app:layout_constraintTop_toBottomOf="@id/loadButton"
                        android:layout_marginTop="@dimen/big_margin"
                        android:onClick="@{() -> vm.startSettingsActivity()}" />

                <android.support.v7.widget.AppCompatButton
                        android:id="@+id/aboutButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/about_button_text"
                        android:background="#FFEB3B"
                        app:layout_constraintTop_toBottomOf="@id/settingsButton"
                        app:layout_constraintBottom_toBottomOf="parent"
                        android:layout_marginTop="@dimen/big_margin"
                        android:layout_marginBottom="@dimen/big_margin"
                        android:onClick="@{() -> vm.startAboutActivity()}"
                        app:layout_constraintVertical_bias="0.0" />


            </android.support.constraint.ConstraintLayout>

        </android.support.constraint.ConstraintLayout>

    </ScrollView>

</layout>